# football-llm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crypto-trading/assignments/: Process Appendix.docx
data/processed/: match_contexts.json
data/raw/: world_cup_events.csv  world_cup_team_match_stats.csv
data/training/: eval.jsonl  sample_training_example.json  train.jsonl
docker/: api.Dockerfile  ui.Dockerfile
docs/: DATA_CARD.md  MODEL_CARD.md
football-data/: .env.example  .gitignore  README.md  align_2026_data.py  analyze_ghana.py  api_client.py  check_api.py  config.py  enhance_wc_data.py  main.py  repair_statistics.py  requirements.txt  scrape_all_teams.py  scrape_ghana.py  scrape_historical.py  scrape_past_wc_teams.py  scrape_player_match_stats.py  scrape_statsbomb_team_stats.py  scrape_wc_player_stats.py  scrape_world_cup_history.py  scraper.py  utils.py
football-data/data/: historical_scrape_progress.json  historical_scrape_progress.json.2015-2024-backup  historical_scrape_progress.json.backup-20260130-204838  past_wc_scrape_progress.json  past_wc_teams_config.json  remaining_work_breakdown.json  repair_progress.json  scrape_progress.json  validation_report.json
football-data/data/past_wc_statistics_old/: bosnia_and_herzegovina_player_statistics.csv  cameroon_player_statistics.csv  chile_player_statistics.csv  costa_rica_player_statistics.csv  denmark_player_statistics.csv  greece_player_statistics.csv  honduras_player_statistics.csv  iceland_player_statistics.csv  italy_player_statistics.csv  nigeria_player_statistics.csv  north_korea_player_statistics.csv  peru_player_statistics.csv  poland_player_statistics.csv  russia_player_statistics.csv  serbia_player_statistics.csv  slovakia_player_statistics.csv  slovenia_player_statistics.csv  sweden_player_statistics.csv  wales_player_statistics.csv
football-data/data/players/: algeria_squad.csv  all_squads.csv  argentina_squad.csv  australia_squad.csv  austria_squad.csv  belgium_squad.csv  brazil_squad.csv  canada_squad.csv  cape_verde_islands_squad.csv  cape_verde_squad.csv  colombia_squad.csv  croatia_squad.csv  curaçao_squad.csv  ecuador_squad.csv  egypt_squad.csv  england_squad.csv  france_squad.csv  germany_squad.csv  ghana_squad.csv  haiti_squad.csv  iran_squad.csv  ivory_coast_squad.csv  japan_squad.csv  jordan_squad.csv  mexico_squad.csv  morocco_squad.csv  netherlands_squad.csv  new_zealand_squad.csv  norway_squad.csv  panama_squad.csv  paraguay_squad.csv  portugal_squad.csv  qatar_squad.csv  saudi_arabia_squad.csv  scotland_squad.csv  senegal_squad.csv  south_africa_squad.csv  south_korea_squad.csv  spain_squad.csv  switzerland_squad.csv  (+4 more)
football-data/data/statistics/: algeria_player_statistics.csv  argentina_player_statistics.csv  australia_player_statistics.csv  austria_player_statistics.csv  belgium_player_statistics.csv  brazil_player_statistics.csv  canada_player_statistics.csv  cape_verde_islands_player_statistics.csv  colombia_player_statistics.csv  croatia_player_statistics.csv  curaçao_player_statistics.csv  ecuador_player_statistics.csv  egypt_player_statistics.csv  england_player_statistics.csv  france_player_statistics.csv  germany_player_statistics.csv  ghana_player_statistics.csv  haiti_player_statistics.csv  iran_player_statistics.csv  ivory_coast_player_statistics.csv  japan_player_statistics.csv  jordan_player_statistics.csv  mexico_player_statistics.csv  morocco_player_statistics.csv  netherlands_player_statistics.csv  new_zealand_player_statistics.csv  norway_player_statistics.csv  panama_player_statistics.csv  paraguay_player_statistics.csv  portugal_player_statistics.csv  qatar_player_statistics.csv  saudi_arabia_player_statistics.csv  scotland_player_statistics.csv  senegal_player_statistics.csv  south_africa_player_statistics.csv  south_korea_player_statistics.csv  spain_player_statistics.csv  switzerland_player_statistics.csv  tunisia_player_statistics.csv  uruguay_player_statistics.csv  (+2 more)
football-data/data/statistics_clean/: austria_player_statistics_clean.csv  belgium_player_statistics_clean.csv  croatia_player_statistics_clean.csv  curaçao_player_statistics_clean.csv  ecuador_player_statistics_clean.csv  ghana_player_statistics_clean.csv  iran_player_statistics_clean.csv  ivory_coast_player_statistics_clean.csv  japan_player_statistics_clean.csv  (+8 more)
notebooks/: eval_harness.ipynb  ft_predictions_halftime.json  ft_predictions_pregame.json  serve_demo.ipynb  train_colab.ipynb
results/: README.md  xgboost_predictions_halftime.json  xgboost_predictions_pregame.json
scripts/: make_figures.py  reproduce_paper.py
src/data_prep/: aggregate_player_stats.py  build_team_profiles.py  generate_training_data.py  run_pipeline.py
src/football_llm/: paths.py
src/serving/: api.py  demo_ui.py  serve_vllm.sh
src/training/: merge_adapter_weights.py  run_sft.py
tests/: conftest.py  test_api_integration.py  test_backtest.py  test_loader.py  test_metrics.py  test_poisson.py  test_serving.py
(+182 files in other folders)
