[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-llm"
version = "0.2.0"
description = "QLoRA-fine-tuned Llama 3.1 8B for halftime-conditioned Over/Under betting on World Cup matches"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Zanwen (Ryan) Fu" }]
keywords = ["llm", "qlora", "football", "sports-betting", "fine-tuning", "llama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies: enough to reproduce the paper from committed prediction dumps.
# Heavier dependencies (torch, vllm, xgboost) live in extras.
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "scipy>=1.11,<2",
    "matplotlib>=3.7,<4",
    "jsonlines>=4.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Baseline ML — XGBoost on identical features
baselines = [
    "xgboost>=2.0,<3",
    "scikit-learn>=1.3,<2",
]

# Fine-tuning: requires GPU. Pinned to versions known to work on Colab T4.
train = [
    "torch>=2.4,<3",
    "transformers>=4.46,<5",
    "datasets>=3.1,<4",
    "accelerate>=1.1,<2",
    "peft>=0.13,<1",
    "trl>=0.12,<1",
    "bitsandbytes>=0.44",
    "liger-kernel>=0.4.2",
    "huggingface-hub>=0.25",
    "hf-transfer>=0.1.8",
    "tensorboard>=2.15",
]

# Serving stack: vLLM + FastAPI + Gradio
serve = [
    "openai>=1.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "gradio>=4.0",
    "pydantic>=2.0",
    "requests>=2.31",
    # vllm is optional because it requires CUDA; install on GPU hosts only.
]
vllm = [
    "vllm>=0.6",
]

# Development — tests, lint, pre-commit
dev = [
    "football-llm[baselines,serve]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.8",
    "detect-secrets>=1.5",
    "pre-commit>=3.6",
    "httpx>=0.27",  # For FastAPI TestClient
]

# Convenience: everything including vLLM (GPU required)
all = [
    "football-llm[baselines,train,serve,vllm,dev]",
]

[project.urls]
Homepage = "https://github.com/zanwenfu/football-llm"
Model = "https://huggingface.co/zanwenfu/football-llm-qlora"
Paper = "https://github.com/zanwenfu/football-llm/blob/main/IDS598_Final_Project_Report.pdf"
Issues = "https://github.com/zanwenfu/football-llm/issues"

[project.scripts]
football-llm-pipeline = "football_llm.data_prep.run_pipeline:main"
football-llm-train = "football_llm.training.run_sft:main"

# ---------------------------------------------------------------------------
# Packaging
# ---------------------------------------------------------------------------

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["football_llm*"]

[tool.setuptools.package-data]
"football_llm.training" = ["recipes/*.yaml"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    "ignore::DeprecationWarning:torch.*",
    "ignore::DeprecationWarning:transformers.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line length handled by formatter
    "B008",    # function call in argument default (FastAPI pattern)
    "B905",    # zip(..., strict=True) — noisy for short iterables
    "E741",    # single-letter variable "l" allowed in numeric code
    "RUF001",  # ambiguous unicode in strings (we intentionally use λ, ×, etc.)
    "RUF002",  # ambiguous unicode in docstrings
    "RUF003",  # ambiguous unicode in comments
    "SIM108",  # if-else-block-instead-of-if-exp — sometimes clearer as blocks
]


# Legacy data_prep scripts retain pre-refactor style; re-style gradually.
[tool.ruff.lint.per-file-ignores]
"src/football_llm/data_prep/*" = ["F841", "B007", "B904", "RUF046", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["football_llm"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true  # many ML deps lack stubs
strict_optional = false

[[tool.mypy.overrides]]
module = ["football_llm.data_prep.*", "football_llm.training.*"]
ignore_errors = true  # legacy code, opt-in strictness via tests instead
